# Laba-20

./: CMakeLists.txt  main.c
algorithms/task/: 11_auto_completion.h  1_fill_matrix.h  2_game_life.h  3_median_filter.h  4_get_domains.h  5_get_submatrix.h  6_generate_nums.h  7_binary_tree.h  8_rearrange_string.h  9_filter_nums.h
data_structures/: CMakeLists.txt
data_structures/matrix/: matrix.c  matrix.h
data_structures/string/: string_.c  string_.h
data_structures/vector/: vector.c  vector.h
file_for_task/task_3/: task_3_test_3.txt  task_3_test_5.txt
file_for_task/task_4/: task_4.txt
file_for_task/task_6/: task_6.txt
